[fix][dingo-exec] Correct add/drop partition